--- a/content/authors/authors.yml
+++ b/content/authors/authors.yml
@@ -2,7 +2,7 @@
   bio: |
     Zain Fathoni adalah seorang Senior Software Engineer di Ninja Van Singapura.
     Kini ia sangat tertarik dengan JavaScript dan React beserta ekosistemnya.
-    https://zainf.dev/me
+    https://zainf.dev
   avatar: ./avatars/zain.jpg
   featured: true
   social:
@@ -10,7 +10,13 @@
       url: https://github.com/zainfathoni
     - name: twitter
       url: https://twitter.com/zainfathoni
+    - name: facebook
+      url: https://www.facebook.com/zain.fathoni
     - name: instagram
       url: https://www.instagram.com/zain.fathoni
     - name: linkedin
-      url: https://www.linkedin.com/in/zainfathoni
+      url: https://www.linkedin.com/in/zainfathoni/
+    - name: stackoverflow
+      url: https://stackoverflow.com/story/zainfathoni
+    - name: medium
+      url: https://medium.com/@zain.fathoni
