Add Author slug

--- a/content/authors/authors.yml
+++ b/content/authors/authors.yml
@@ -1,4 +1,5 @@
 - name: Zain Fathoni
+  slug: zain
   bio: |
     Zain Fathoni adalah seorang Senior Software Engineer di Ninja Van Singapura.
     Kini ia sangat tertarik dengan JavaScript dan React beserta ekosistemnya.
