--- a/content/authors/authors.yml
+++ b/content/authors/authors.yml
@@ -27,8 +27,9 @@
   slug: darvin-sinaga
   bio: |
     Darvin adalah seorang Frontend Developer Tampan di prospace.io.
-    Saat ia sangat tertarik dan menekuni React dan  ekosistemnya.
-    Aktif di Komunitas online maupun offline
+    Saat ini ia sangat tertarik dan menekuni React dan  ekosistemnya.
+    Aktif di beberapa komunitas online maupun offline.
+
     http://darvinsinaga.com
   avatar: ./avatars/darvin.jpg
   featured: true
