--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
     "gatsby-plugin-manifest": "2.2.33",
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "2.11.0",
+    "@typescript-eslint/parser": "2.11.0",
+    "eslint": "6.7.2",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "typescript": "3.7.3"
   }
 }
