--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "format": "eslint --fix --ignore-path .gitignore .",
     "build": "gatsby build",
     "postbuild": "cp _redirects public/_redirects",
     "serve": "gatsby serve",
