--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react-hooks": "2.3.0",
     "husky": "3.1.0",
     "lint-staged": "9.5.0",
+    "markdownlint-cli": "0.19.0",
     "prettier": "1.19.1",
     "typescript": "3.7.3"
   },
@@ -50,6 +51,7 @@
     "src/**/*.{js,jsx,ts,tsx,json}": [
       "eslint --fix --ignore-path .gitignore",
       "git add"
-    ]
+    ],
+    "*.md": "markdownlint"
   }
 }
