--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "scripts": {
     "format": "eslint --fix --ignore-path .gitignore .",
+    "sort": "sortier src",
     "build": "gatsby build",
     "postbuild": "cp _redirects public/_redirects",
     "serve": "gatsby serve",
@@ -29,6 +30,7 @@
     "react-dom": "16.12.0"
   },
   "devDependencies": {
+    "@snowcoders/sortier": "3.0.1",
     "@typescript-eslint/eslint-plugin": "2.11.0",
     "@typescript-eslint/parser": "2.11.0",
     "eslint": "6.7.2",
@@ -50,6 +52,7 @@
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
       "eslint --fix --ignore-path .gitignore",
+      "sortier",
       "git add"
     ],
     "*.md": "markdownlint"
